# internal/pkg/common/endpoint_defaults.go
@@ -24,6 +24,7 @@ var defaultEndpointInfoMap = map[constant.EndpointType]EndpointInfo{
 	constant.EndpointTypeJinaRerank:      {Path: "/rerank", Method: "POST"},
 	constant.EndpointTypeImageGeneration: {Path: "/v1/images/generations", Method: "POST"},
 	constant.EndpointTypeEmbeddings:      {Path: "/v1/embeddings", Method: "POST"},
+	constant.EndpointTypeSystemOne:       {Path: "/v1/systemone", Method: "POST"},
 }
 
 // GetDefaultEndpointInfo 返回指定端点类型的默认信息以及是否存在
